<?xml version="1.0"?>
<package format="2">
  <name>uav_car_coop</name>
  <version>0.0.1</version>
  <description>Single-UAV and single-car cooperative launch package.</description>

  <maintainer email="hbyy@example.com">hbyy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>px4</exec_depend>
  <exec_depend>px4_ego_lidar</exec_depend>
  <exec_depend>ros_gazebo_obstacle_car</exec_depend>
  <exec_depend>top_akm_dl_robot</exec_depend>
  <exec_depend>ego_planner</exec_depend>
</package>
